--- a/template/order.html
+++ b/template/order.html
@@ -184,8 +184,9 @@
       }
     </style>
   </head>
-  <body style="background-color:tomato";>
-    #<a href='/logout'><button>LOGOUT</button></a>
+  <body style="background-color:black";>
+    <a href='{{url_for('logout')}}'><button>LOGOUT</button></a>
+    <a href='{{url_for('sales')}}'><button>MANAGER</button></a>
     {% with messages = get_flashed_messages() %}
    {% if messages %}
       {% for message in messages %}
