--- a/template/sales.html
+++ b/template/sales.html
@@ -205,7 +205,7 @@ table.table .avatar {
 }
 /* Modal styles */
 .modal .modal-dialog {
-	max-width: 400px;
+	max-width: 1200px;
 }
 .modal .modal-header, .modal .modal-body, .modal .modal-footer {
 	padding: 20px 30px;
@@ -237,31 +237,7 @@ table.table .avatar {
 	font-weight: normal;
 }
 </style>
-<script>
-$(document).ready(function(){
-	// Activate tooltip
-	$('[data-toggle="tooltip"]').tooltip();
 
-	// Select/Deselect checkboxes
-	var checkbox = $('table tbody input[type="checkbox"]');
-	$("#selectAll").click(function(){
-		if(this.checked){
-			checkbox.each(function(){
-				this.checked = true;
-			});
-		} else{
-			checkbox.each(function(){
-				this.checked = false;
-			});
-		}
-	});
-	checkbox.click(function(){
-		if(!this.checked){
-			$("#selectAll").prop("checked", false);
-		}
-	});
-});
-</script>
 </head>
 <body style="background-color:black">
 <div class="container-xl">
@@ -273,6 +249,8 @@ $(document).ready(function(){
 						<h2>Sales <b>Records</b></h2>
 					</div>
 					<div class="col-sm-6">
+						<a href="#navModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>filter orders</span></a>
+						<a href="#filterModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>filter orders</span></a>
 						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Customer info</span></a>
 
 					</div>
@@ -298,7 +276,7 @@ $(document).ready(function(){
 					{% for data in info.items %}
 					<tr>
 						<td>{{data.eid}}</td>
-						<td>{{data.ddate}}</td>
+						<td>{{data.date}}</td>
 						<td>{{data.item}}</td>
 						<td>{{data.size}}</td>
 						<td>{{data.quant}}</td>
@@ -348,7 +326,7 @@ $(document).ready(function(){
 		</div>
 	</div>
 </div>
-<!-- Edit Modal HTML -->
+
 <div id="addEmployeeModal" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -359,7 +337,7 @@ $(document).ready(function(){
 				</div>
 				<div class="modal-body">
 					<div class="form-group">
-						<label>Name</label>()
+						<label>Name</label>
 
 						<input type="text" class="form-control" required>
 					</div>
@@ -384,6 +362,77 @@ $(document).ready(function(){
 		</div>
 	</div>
 </div>
+<div id="filterModal" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<form>
+				<div class="modal-header">
+					<h4 class="modal-title">filter by date</h4>
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				</div>
+				<div class="modal-body">
+				<centre>
+						<label>from</label>
+
+						<input type="date"  size="4" required>
+					
+					<span class="input-group-btn" 
+					style="width:0px;"></span>
+					
+					
+						<label>To</label>
+						<input type="date" size="4" required>
+						
+
+						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+					<input type="submit" class="btn btn-success" value="filter">
+				
+					
+										
+				</div>
+				
+			</form>
+			<div style="height: 150px; overflow: auto">
+
+			<table class="table table-striped table-hover" style="overflow: auto">
+				<thead style="background-color:orange";>
+					<tr>
+
+						<th>My id</th>
+						<th>Date </th>
+						<th>Item</th>
+						<th>Size</th>
+						<th>Quantity</th>
+						<th>Item Desc</th>
+						<th>Selling Price</th>
+						<th>Customer Phone</th>
+						<th>Customer Location</th>
+					
+					</tr>
+				</thead>
+				<tbody style="color:blue">
+					{% for data in info.items %}
+					<tr>
+						<td>{{data.eid}}</td>
+						<td>{{data.date}}</td>
+						<td>{{data.item}}</td>
+						<td>{{data.size}}</td>
+						<td>{{data.quant}}</td>
+						<td>{{data.desc}}</td>
+						<td>{{data.sprice}}</td>
+						<td>{{data.cphone}}</td>
+						<td>{{data.loc}}</td>
+						
+					</tr>
+					
+					{% endfor %}
+				</tbody>
+			</table>
+			</div>
+		</div>
+	</div>
+</div>
+
 
 
 </body>
