--- a/template/sales.html
+++ b/template/sales.html
@@ -249,9 +249,11 @@ table.table .avatar {
 						<h2>Sales <b>Records</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<a href="#navModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>filter orders</span></a>
-						<a href="#filterModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>filter orders</span></a>
-						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Customer info</span></a>
+						<a href="{{url_for('sales')}}" class="btn btn-success" style="background-color:blue"> <span>Refresh</span></a>
+						<a href="{{url_for('sales')}}" class="btn btn-success" style="background-color:purple"> <span>Export</span></a>
+						<a href="{{url_for('sales')}}" class="btn btn-success" style="background-color:Tomato"> <span>Delivery </span></a>
+						<a href="#filterModal" class="btn btn-success" style="background-color:black" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>filter orders</span></a>
+						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add info</span></a>
 
 					</div>
 				</div>
@@ -328,7 +330,7 @@ table.table .avatar {
 </div>
 
 <div id="addEmployeeModal" class="modal fade">
-	<div class="modal-dialog">
+	<div class="modal-dialog" style="max-width:400px;">
 		<div class="modal-content">
 			<form>
 				<div class="modal-header">
